fix(demos): homepage align adjustment

--- a/apps/demos/src/app/pages/components/homepage/homepage.component.styl
+++ b/apps/demos/src/app/pages/components/homepage/homepage.component.styl
@@ -11,6 +11,9 @@
     line-height: 120%
     margin-top: 0
 
+  p
+    text-align: right
+
   img
     max-width: 100%
     vertical-align: middle
